# rustyphone

./: .env  Cargo.toml  README.md  setuptestdb.sh
migrations/: 20201115192031_initial_setup.sql
src/: constants.rs  create.rs  delete.rs  errors.rs  lib.rs  location.rs  main.rs  mode.rs  number_string.rs  person.rs  person_select.rs  person_view.rs  phone.rs  phone_category.rs  phone_number.rs  phone_row.rs  query.rs  query_mode.rs  read.rs  traits.rs  update.rs  utils.rs
src/create/: person.rs  phone .rs  phone.rs
src/delete/: department.rs  person_phone.rs  phone.rs  title.rs
src/read/: department.rs  person.rs  phone.rs  title.rs
src/update/: department.rs  person.rs  phone.rs  title.rs
userdb-core/: Cargo.toml
userdb-core/src/: constants.rs  person_select.rs
userdb-core/src/delete/: department.rs  person.rs  person_phone.rs  phone.rs  title.rs
userdb_core/: Cargo.toml
userdb_core/migrations/: 20201115192031_initial_setup.sql
userdb_core/src/: delete.rs  errors.rs  phone.rs  phone_category.rs  read.rs  update.rs  utils.rs
userdb_core/src/create/: department.rs  person.rs  phone.rs  title.rs
userdb_core/src/read/: person.rs  person_simple.rs
userdb_core/src/update/: department.rs  title.rs
userdb_phone/: Cargo.toml
userdb_phone/src/: create.rs  delete.rs  lib.rs  opt.rs  process.rs  read.rs  update.rs
userdb_phone/src/opt/: create.rs  delete.rs  read.rs  update.rs
userdb_phone/src/process/: create.rs  delete.rs  read.rs  update.rs
