[package]
name = "userdb"
version = "0.1.0"
authors = ["Jonathan Gerber <jlgerber@gmail.com>"]
edition = "2018"


[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/migrate.rs"

[dependencies]
sqlx = { version = "0.4.1", features = [ "json","postgres", "runtime-async-std-native-tls", "migrate"] }
async-std = { version = "1.7.0", features = ["attributes"] }
futures = "0.3.8"
serde = "1.0.117"
serde_json = "1.0.59"
