[package]
name = "userdb_phone"
version = "0.1.0"
authors = ["Jonathan Gerber <jlgerber@gmail.com>"]
edition = "2018"


[[bin]]
name = "phone"
path = "src/bin/main.rs"


[dependencies]
userdb_core = {path = "../userdb_core"}
sqlx = { version = "0.4.1", features = [ "json","postgres", "runtime-async-std-native-tls", "migrate"] }
async-std = { version = "1.7.0", features = ["attributes"] }
futures = "0.3.8"
serde = "1.0.117"
serde_json = "1.0.59"
structopt = "0.3.20"
#strfmt = "0.1.6"
prettytable-rs = "0.8.0"
#thiserror = "1.0.22"
#enum-kinds = "0.5.0"
colored = "2.0.0"
